--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ bleach==6.0.0
 blinker==1.6.2
 bqplot==0.12.39
 branca==0.6.0
-cachelib==0.9.0
 cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
@@ -33,11 +32,7 @@ entrypoints==0.4
 executing==1.2.0
 fastjsonschema==2.16.3
 filelock==3.12.0
-Flask==2.2.3
-Flask-Caching==2.0.2
-Flask-Cors==3.0.10
-flask-restx==1.1.0
-folium==0.13.0
+folium==0.14.0
 fonttools==4.39.3
 fqdn==1.5.1
 gdown==4.7.1
@@ -47,8 +42,7 @@ GitPython==3.1.31
 h11==0.14.0
 idna==3.4
 imageio==2.27.0
-importlib-metadata==6.6.0
-importlib-resources==5.12.0
+importlib-metadata==6.5.0
 ipyevents==2.0.1
 ipyfilechooser==0.6.0
 ipykernel==6.22.0
@@ -72,15 +66,14 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.4
 kiwisolver==1.4.4
 large-image==1.20.5
-large-image-source-gdal==1.20.5
 leafmap==0.19.0
-localtileserver==0.6.4
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.5
+morecantile==3.3.0
 nbclassic==0.5.5
 nbclient==0.7.3
 nbconvert==7.3.1
@@ -88,7 +81,7 @@ nbformat==5.8.0
 nest-asyncio==1.5.6
 notebook==6.5.4
 notebook_shim==0.2.2
-numpy==1.24.3
+numpy==1.24.2
 packaging==23.1
 palettable==3.3.3
 pandas==1.5.3
@@ -107,6 +100,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==11.0.0
 pycparser==2.21
+pydantic==1.10.7
 pydeck==0.8.1b0
 Pygments==2.15.1
 Pympler==1.0.1
@@ -131,10 +125,10 @@ requests==2.28.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.3.4
+rio-cogeo==3.5.1
 rioxarray==0.14.1
 scooby==0.7.1
 Send2Trash==1.8.0
-server-thread==0.2.0
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
@@ -146,7 +140,7 @@ terminado==0.17.1
 tinycss2==1.2.1
 toml==0.10.2
 toolz==0.12.0
-tornado==6.3.1
+tornado==6.3
 tqdm==4.65.0
 traitlets==5.9.0
 traittypes==0.2.1
@@ -158,6 +152,7 @@ urllib3==1.26.15
 uvicorn==0.21.1
 validators==0.20.0
 vtk==9.2.6
+watchdog==3.0.0
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
